welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:36: error: value update is not a member of String
*/if(litMessage()="A")
     ^